[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/passaro/morte/2.png" type="Texture" id=1]
[ext_resource path="res://assets/passaro/morte/0.png" type="Texture" id=2]
[ext_resource path="res://assets/passaro/cima/sprite_1.png" type="Texture" id=3]
[ext_resource path="res://assets/passaro/lado/sprite_2.png" type="Texture" id=4]
[ext_resource path="res://assets/passaro/cima/sprite_2.png" type="Texture" id=5]
[ext_resource path="res://assets/passaro/morte/3.png" type="Texture" id=6]
[ext_resource path="res://assets/passaro/lado/sprite_0.png" type="Texture" id=7]
[ext_resource path="res://assets/passaro/lado/sprite_1.png" type="Texture" id=8]
[ext_resource path="res://assets/passaro/cima/sprite_0.png" type="Texture" id=9]
[ext_resource path="res://assets/passaro/morte/1.png" type="Texture" id=10]
[ext_resource path="res://assets/passaro/susto.png" type="Texture" id=11]
[ext_resource path="res://Pato.gd" type="Script" id=12]
[ext_resource path="res://assets/sons/pato.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "cima",
"speed": 7.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 4 ) ],
"loop": true,
"name": "lado",
"speed": 7.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "susto",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 10 ), ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "morte",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 50.4876

[node name="Pato" type="KinematicBody2D"]
script = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "cima"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="movimento" type="Timer" parent="."]
wait_time = 0.001
autostart = true

[node name="anima" type="Timer" parent="."]
wait_time = 0.001
autostart = true

[node name="morte" type="Timer" parent="."]
wait_time = 0.001

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="movimento" to="." method="_on_movimento_timeout"]
[connection signal="timeout" from="anima" to="." method="_on_anima_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
